# hotkey-transcriber

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.de.md  README.md  pyproject.toml
.github/worflows/: build.yml
.github/workflows/: build-packages.yml  build.yml  translate-readme.yml
desktop_files/linux/: hotkey-transcriber.desktop  install_desktop.py
docs/: architecture.md  market-analysis.md
resources/linux/: hotkey-transcriber.desktop  install_desktop.py  run_tray.sh
src/hotkey_transcriber/: action_settings_rows.py  app_log_capture.py  autostart.py  backend_manager.py  device_detector.py  keyboard_controller.py  keyboard_listener.py  main.py  object_loader.py  resource_path_resolver.py  resources_manger.py  speech_recorder.py  spoken_text_actions.py  torch_whisper_backend.py  wake_word.py  wake_word_script_actions.py  wsl_backend.py
src/hotkey_transcriber/actions/: spoken_text_actions.py
src/hotkey_transcriber/builtin_scripts/: __init__.py  browser_temporary_chat_firefox.py
src/hotkey_transcriber/config/: config.json  config_manager.py  config_manger.py
src/hotkey_transcriber/gui/: action_settings_ui_rows.py  hotkey_change_dialog.py  log_dialog.py  settings_dialog.py  tray_app.py  tray_notifications.py
src/hotkey_transcriber/keyboard/: keyboard_controller.py  keyboard_listener.py
src/hotkey_transcriber/resources/linux/: install_desktop.py
src/hotkey_transcriber/resources/wakewords/: hey_chat.onnx  hey_chat.onnx.data  hey_chef.onnx  hey_chef.onnx.data  hey_chef_v1.onnx  hey_chef_v2.onnx  hey_dude.onnx  hey_dude.onnx.data  hey_kitt.md  hey_kitt.onnx  hey_kitt_v1.onnx  hey_kitt_v2.onnx
src/hotkey_transcriber/resources/wakewords/hey chef/: hey_chef_tests.md  hey_chef_v1.yaml  hey_chef_v2.yaml
src/hotkey_transcriber/resources/wakewords/hey kitt/: hey_kitt.md  kitt_v1.yaml  kitt_v2.yaml
src/hotkey_transcriber/transcription/: compute_device_detector.py  model_and_recorder_factory.py  torch_whisper_fallback_backend.py  whisper_backend_selector.py  whisper_cpp_backend.py  whisper_npu_backend.py  wsl_whisper_bridge.py
src/hotkey_transcriber/wake_word/: wake_word_listener.py
tests/: test_action_settings_ui_rows_serializers.py  test_app_log_capture.py  test_config_manager.py  test_hotkey_change_dialog.py  test_resource_path_resolver.py  test_speech_recorder_normalize_language.py  test_speech_recorder_voice_commands.py
tools/: WINDOWS_ROCM_NATIVE_MANUAL.de.md  WINDOWS_ROCM_NATIVE_MANUAL.md  build_ctranslate2_rocm_windows.ps1  check_gpu_working.py  conda_helper.py  convert_imports.py  install_linux.sh  install_windows.ps1  setup_conda_rocm.py  setup_wsl_amd.ps1  uninstall_linux.sh  uninstall_windows.ps1  whisper_npu_server.py
tools/userscripts/: chatgpt_focus_insert_prompt.user.js
tools/wsl/: setup_hotkey_transcriber_rocm.sh
