[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotkey-transcriber"
version = "0.1.4"
description = "Live-Diktat-Tool mit Whisper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper",
    "sounddevice",
    "numpy",
    "pynput",
    "pyautogui",
    "pyperclip",
    "PyQt5",
]

[project.scripts]
hotkey-transcriber = "hotkey_transcriber.main:main"  # ⇢ `hotkey-transcriber` ist jetzt ein Konsolenbefehl

[tool.setuptools]
package-dir = {"" = "src"}      
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hotkey_transcriber = ["resources/**/*"]

[tool.setuptools.data-files]
"share/applications" = ["desktop_files/linux/hotkey-transcriber.desktop"]
"share/icons/hicolor/256x256/apps" = ["src/hotkey_transcriber/resources/icon/microphone.png"]

[tool.briefcase]

[tool.briefcase.app.hotkey_transcriber]
formal_name = "Hotkey Transcriber"
description = "Live-Diktat-Tool mit Whisper"
bundle = "io.github.chefsichter.hotkeytranscriber"
version = "0.1.4"
sources = ["src/hotkey_transcriber"]
icon = "src/hotkey_transcriber/resources/icon/microphone.png"
requires = [
    "faster-whisper",
    "sounddevice",
    "numpy",
    "pynput",
    "pyautogui",
    "pyperclip",
    "PyQt5",
]

[tool.briefcase.app.hotkey_transcriber.linux]
distribution = "AppImage"
