[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hotkey-transcriber"
version = "0.1.4"
description = "Live-Diktat-Tool mit Whisper"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper",
    "sounddevice",
    "numpy",
    "keyboard",
    "pyautogui",
    "pyperclip",
    "PyQt5",
    "openwakeword",
    "setuptools<82",

    "evdev; sys_platform == 'linux'",
    "PyGObject; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "black>=24",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
hotkey-transcriber = "hotkey_transcriber.main:main"
hotkey-transcriber-autostart = "hotkey_transcriber.autostart:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hotkey_transcriber = ["resources/**/*"]

[tool.setuptools.data-files]
"share/applications" = ["desktop_files/linux/hotkey-transcriber.desktop"]
"share/icons/hicolor/256x256/apps" = ["src/hotkey_transcriber/resources/icon/microphone.png"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]

[tool.briefcase]
project_name = "hotkey-transcriber"
bundle = "io.github.chefsichter.hotkeytranscriber"
version = "0.1.4"
description = "Live-Diktat-Tool mit Whisper"

[tool.briefcase.app.hotkey_transcriber]
formal_name = "Hotkey Transcriber"
description = "Live-Diktat-Tool mit Whisper"
bundle = "io.github.chefsichter.hotkeytranscriber"
version = "0.1.4"
sources = ["src/hotkey_transcriber"]
icon = "src/hotkey_transcriber/resources/icon/hotkey-transcriber"
requires = [
    "faster-whisper",
    "sounddevice",
    "numpy",
    "keyboard",
    "pyautogui",
    "pyperclip",
    "PyQt5",
    "openwakeword",
    "setuptools<82",

    "evdev; sys_platform == 'linux'",
]

[tool.briefcase.app.hotkey_transcriber.linux]
distribution = "AppImage"
